[easy_install]
zip_ok = false

[bdist_wheel]
universal = 1

[metadata]
license_files = LICENSE.txt

[nosetests]
match=^test
where=pyramid_chameleon
nocapture=1
cover-package=pyramid_chameleon
cover-erase=1

[aliases]
dev = develop easy_install pyramid_chameleon[testing]
docs = develop easy_install pyramid_chameleon[docs]
